force-app/main/default/objects/Jira_Status_Mapping_Template__mdt/Jira_Status_Mapping_Template__mdt.object-meta.xml
<CustomObject>
    <label>Jira Status Mapping Template</label>
    <pluralLabel>Jira Status Mappings</pluralLabel>
</CustomObject>