force-app/main/default/objects/Jira_Status_Mapping_Template__mdt/fields/ExternalValue__c.field-meta.xml
<CustomField>
    <fullName>ExternalValue__c</fullName>
    <label>External Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>