force-app/main/default/objects/Jira_Status_Mapping_Template__mdt/fields/SyncDirection__c.field-meta.xml
<CustomField>
    <fullName>SyncDirection__c</fullName>
    <label>Sync Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>