force-app/main/default/objects/Jira_Status_Mapping_Template__mdt/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Copado_Status__c</columns>
    <columns>ExternalValue__c</columns>
    <columns>SyncDirection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>